packages/prop-house-webapp/src/components/RenderedProposalFields/RenderedProposalFields.module.css
.headerContainer {
  display: flex;
  margin-top: 2rem;
  flex-direction: column;
}
.headerContainer {
  margin-top: 0rem;
}

@media (min-width: 577px) {
  .headerContainer {
    flex-direction: row;
    gap: 20px;
  }
}

.previewCol {
  word-break: break-word;
}
.previewCol img {
  max-width: 100%;
}
.previewCol a {
  text-decoration: underline !important;
}
.previewCol h2 {
  margin-top: 3rem;
  font-size: 18px;
  font-weight: 600;
  color: var(--brand-gray);
}

.previewCol p {
  font-size: 18px;
  color: var(--brand-black);
}

hr {
  background-color: var(--brand-gray);
}

.subinfo {
  display: flex;
  color: var(--brand-black);
  font-weight: 700;
  flex-direction: row;
  padding-bottom: 5px;
}
.propNumber {
  color: black;
}
@media (max-width: 577px) {
  .subinfo {
    flex-direction: column;
    gap: 5px;
  }
}
.subinfo a {
  font-weight: 650;
}
@media (max-width: 577px) {
  .propSpacer {
    display: none !important;
  }
}
.submittedBy {
  display: flex;
  align-items: flex-end;
  color: var(--brand-black);
  font-weight: 700;
  font-size: 1rem;
}

.markdown a {
  color: var(--brand-pink) !important;
  text-decoration: underline !important;
}
.markdown img {
  max-width: 100%;
  height: auto;
}

.communityAndPropNumber {
  display: flex;
  align-items: center;
}

.communityProfImgContainer {
  display: flex;
  align-items: center;
}

.communityProfImg {
  width: 24px;
  height: 24px;
  border-radius: 24px;
  margin-right: 4px;
}

